examples/test/testpolicy9069.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9069
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key35: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value22
      podSelector:
        matchLabels:
          key44: value23
          key19: value30
          key35: value37
